--- a/react_web_front/src/components/member/member.css
+++ b/react_web_front/src/components/member/member.css
@@ -32,3 +32,44 @@
   justify-content: center;
   gap: 30px;
 }
+
+.mypage-wrap {
+  width: 1200px;
+  display: flex;
+  gap: 10px;
+}
+.mypage-side {
+  width: 20%;
+}
+.mypage-content {
+  flex: 1;
+}
+.account-box {
+  margin-bottom: 10px;
+}
+.account-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 0px;
+}
+.account-info > span:first-child {
+  font-size: 40px;
+  color: var(--main2);
+}
+.account-info > span:last-child {
+  font-size: 20px;
+  font-family: ns-b;
+}
+.my-info .input-item > input {
+  border-bottom: none;
+  padding: 0;
+}
+
+.button-zone {
+  width: 80%;
+  margin: 30px auto;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
