--- a/react_web_front/src/components/board/board.css
+++ b/react_web_front/src/components/board/board.css
@@ -1,3 +1,116 @@
 .board-list {
+  min-width: 1200px;
+}
+.board-content-wrap {
   width: 1200px;
+}
+.board-write-frm > div {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  gap: 20px;
+}
+.board-thumb-wrap {
+  width: 300px;
+  height: 300px;
+  box-sizing: border-box;
+  padding: 20px;
+  border: 1px solid var(--main3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.board-thumb-wrap > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.board-info-wrap {
+  flex-grow: 1;
+}
+.board-info-wrap .input-item > input {
+  border-bottom: none;
+  padding: 0;
+}
+.board-file-wrap {
+  height: 143px;
+  overflow-y: auto;
+}
+.board-file-wrap > p {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+}
+.board-file-wrap > p:hover {
+  background-color: rgba(101, 146, 254, 0.1);
+}
+.del-file-icon {
+  cursor: pointer;
+}
+
+.board-write-frm .button-zone {
+  margin: 30px auto;
+}
+
+.board-view-wrap {
+  width: 1200px;
+}
+
+.board-view-content {
+  width: 1000px;
+  margin: 0 auto;
+}
+.board-view-info {
+  display: flex;
+  justify-content: space-evenly;
+}
+.board-thumbnail {
+  width: 45%;
+  height: 450px;
+  box-sizing: border-box;
+  padding: 30px;
+  display: flex;
+  align-items: center;
+}
+.board-thumbnail > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.board-view-preview {
+  width: 50%;
+  box-sizing: border-box;
+  padding: 30px;
+  height: 450px;
+  display: flex;
+  flex-direction: column;
+}
+.file-title {
+  margin: 20px 0px;
+}
+.file-zone {
+  flex-grow: 1;
+  overflow-y: auto;
+  padding: 10px;
+  border: 1px solid var(--gray6);
+}
+.board-file {
+  padding: 10px 0px;
+  position: relative;
+}
+.board-file:hover {
+  background-color: rgba(238, 238, 238, 0.5);
+}
+.board-file > .file-icon {
+  position: absolute;
+  top: 12px;
+  cursor: pointer;
+}
+.board-file > .file-name {
+  margin-left: 36px;
+}
+.board-content-wrap {
+  width: 100%;
+  padding: 15px;
+  min-height: 400px;
 }
