--- a/react_web_front/src/components/board/board.css
+++ b/react_web_front/src/components/board/board.css
@@ -114,3 +114,10 @@
   padding: 15px;
   min-height: 400px;
 }
+.view-btn-zone {
+  width: 100%;
+  margin: 30px 0px;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
